mavbar completed according to figma with mobile and tablet responsive.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Legal Solution Website</title>
+    <!-- google font: EB Garamond -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- fontAwesome -->
+    <script
+      src="https://kit.fontawesome.com/a627f1b95a.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- custom css -->
     <link rel="stylesheet" href="./styles/legal-solution.css" />
+
+    <!-- responsive css -->
+    <link rel="stylesheet" href="./styles/responsive.css" />
   </head>
-  <body>
-    <header></header>
+  <body class="eb_garamond_font">
+    <header>
+      <!-- navbar start here -->
+      <nav id="navbar" class="container display_flex">
+        <img src="./assets/images/logo2.png" alt="" />
+        <ul id="nav_links" class="display_flex">
+          <li id="nav_items"><a href="" id="nav_link">Home</a></li>
+          <li id="nav_items">
+            <a href="" id="nav_link"
+              >Services <i class="fa-solid fa-angle-right"></i
+            ></a>
+          </li>
+          <li id="nav_items">
+            <a href="" id="nav_link"
+              >cases <i class="fa-solid fa-angle-right"></i>
+            </a>
+          </li>
+          <li id="nav_items">
+            <a href="" id="nav_link"
+              >Blog <i class="fa-solid fa-angle-right"></i
+            ></a>
+          </li>
+          <li id="nav_items">
+            <a href="" id="nav_link"
+              >Contact Us <i class="fa-solid fa-angle-right"></i>
+            </a>
+          </li>
+        </ul>
+        <button class="btn_primary">Free Consultation</button>
+      </nav>
+      <!-- navbar ends here -->
+    </header>
     <main></main>
     <footer></footer>
   </body>
