--- a/index.html
+++ b/index.html
@@ -54,6 +54,31 @@
         <button class="btn_primary">Free Consultation</button>
       </nav>
       <!-- navbar ends here -->
+
+      <!-- banner starts here -->
+      <section id="banner" class="container">
+        <div id="banner_content">
+          <h1 id="banner_heading">
+            We Provide Effective <br />
+            Legal Solutions
+          </h1>
+          <p class="description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority <br />
+            have suffered alteration in some form, by injected humour.
+          </p>
+          <form id="banner_form">
+            <input
+              type="email"
+              name=""
+              id=""
+              placeholder="Search your services"
+            />
+            <input type="submit" value="Search" />
+          </form>
+        </div>
+      </section>
+      <!-- banner ends here -->
     </header>
     <main></main>
     <footer></footer>
